feat(backend): added functionality