@@ -2,16 +2,19 @@ package com.icr.backend.outcome.service.impl;
 
 import com.icr.backend.course.entity.Course;
 import com.icr.backend.course.repository.CourseRepository;
+import com.icr.backend.exception.DuplicateResourceException;
+import com.icr.backend.exception.ResourceNotFoundException;
+import com.icr.backend.outcome.dto.CourseOutcomeRequest;
 import com.icr.backend.outcome.dto.CourseOutcomeResponse;
 import com.icr.backend.outcome.entity.CourseOutcome;
 import com.icr.backend.outcome.repository.CourseOutcomeRepository;
+import com.icr.backend.outcome.service.CoPoMappingService;
 import com.icr.backend.outcome.service.CourseOutcomeService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,17 +22,30 @@ public class CourseOutcomeServiceImpl implements CourseOutcomeService {
 
     private final CourseOutcomeRepository courseOutcomeRepository;
     private final CourseRepository courseRepository;
+    private final CoPoMappingService coPoMappingService;
 
     @Override
     @Transactional
-    public CourseOutcomeResponse createCourseOutcome(String code, String description, Long courseId) {
+    public CourseOutcomeResponse createCourseOutcome(CourseOutcomeRequest request) {
 
-        Course course = courseRepository.findById(courseId)
-                .orElseThrow(() -> new RuntimeException("Course not found"));
+        if (request == null || request.getCourseId() == null) {
+            throw new IllegalArgumentException("Course id is required");
+        }
+
+        if (request.getCode() == null || request.getCode().isBlank()) {
+            throw new IllegalArgumentException("Course outcome code is required");
+        }
+
+        if (courseOutcomeRepository.existsByCodeAndCourseId(request.getCode(), request.getCourseId())) {
+            throw new DuplicateResourceException("Course Outcome with this code already exists for the selected course");
+        }
+
+        Course course = courseRepository.findById(request.getCourseId())
+                .orElseThrow(() -> new ResourceNotFoundException("Course not found with id: " + request.getCourseId()));
 
         CourseOutcome outcome = CourseOutcome.builder()
-                .code(code)
-                .description(description)
+                .code(request.getCode())
+                .description(request.getDescription())
                 .course(course)
                 .build();
 
@@ -43,13 +59,22 @@ public class CourseOutcomeServiceImpl implements CourseOutcomeService {
     public List<CourseOutcomeResponse> getCourseOutcomesByCourse(Long courseId) {
 
         if (!courseRepository.existsById(courseId)) {
-            throw new RuntimeException("Course not found");
+            throw new ResourceNotFoundException("Course not found with id: " + courseId);
         }
 
         return courseOutcomeRepository.findByCourseId(courseId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    @Transactional
+    public List<CourseOutcomeResponse> getAllCourseOutcomes() {
+        return courseOutcomeRepository.findAll()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
     private CourseOutcomeResponse mapToResponse(CourseOutcome outcome) {
@@ -58,6 +83,7 @@ public class CourseOutcomeServiceImpl implements CourseOutcomeService {
                 .code(outcome.getCode())
                 .description(outcome.getDescription())
                 .courseId(outcome.getCourse().getId())
+                .mappedPoIds(coPoMappingService.getPoIdsForCo(outcome.getId()))
                 .build();
     }
 }
